Creates additional Integration tests